[package]
name = "aya-obj"
version = "0.1.0"
description = "An eBPF object file parsing library with BTF and relocation support."
keywords = ["bpf", "btf", "ebpf", "elf", "object"]
license = "MIT OR Apache-2.0"
authors = ["The Aya Contributors"]
repository = "https://github.com/aya-rs/aya"
readme = "README.md"
documentation = "https://docs.rs/aya-obj"
edition = "2021"

[dependencies]
bytes = "1.4.0"
#core-error = { workspace = true, default-features = true }
core-error = { version = "0.0.0", default-features = true }
#hashbrown = { workspace = true, default-features = true }
hashbrown = { version = "0.14", default-features = true }
#log = { workspace = true }
log = { version = "0.4", default-features = false }
#object = { workspace = true, features = ["elf", "read_core"] }
object = { version = "0.32", default-features = false, features = [
    "elf",
    "read_core",
] }
#thiserror = { workspace = true }
thiserror = { version = "1", default-features = false }

[dev-dependencies]
assert_matches = { version = "1.5.0", default-features = false }
rbpf = { version = "0.2.0", default-features = false }

[features]
std = []
