[package]
name = "aya"
version = "0.11.0"
description = "An eBPF library with a focus on developer experience and operability."
keywords = ["bpf", "ebpf", "kernel", "linux"]
license = "MIT OR Apache-2.0"
authors = ["The Aya Contributors"]
repository = "https://github.com/aya-rs/aya"
readme = "README.md"
documentation = "https://docs.rs/aya"
edition = "2021"
rust-version = "1.66"

[dependencies]
assert_matches = { version = "1.5.0", default-features = false }
async-io = { version = "2.0", default-features = false, optional = true }
#aya-obj = { workspace = true, features = ["std"] }
aya-obj = { path = "../aya-obj", version = "0.1.0", default-features = false, features = [
    "std",
] }
bitflags = { version = "2.2.1", default-features = false }
bytes = "1.4.0"
lazy_static = { version = "1", default-features = false }
libc = { version = "0.2.105", default-features = false }
log = { version = "0.4", default-features = false }
#object = { workspace = true, features = ["elf", "read_core", "std"] }
object = { version = "0.32", default-features = false, features = [
    "elf",
    "read_core",
    "std",
] }
#thiserror = { workspace = true }
thiserror = { version = "1", default-features = false }
#tokio = { workspace = true, features = ["rt"], optional = true }
tokio = { version = "1.24.0", default-features = false, features = [
    "rt",
], optional = true }

[dev-dependencies]
tempfile = { version = "3", default-features = false }

[features]
default = []
async_tokio = ["tokio/net"]
async_std = ["dep:async-io"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "-D", "docsrs", "warnings"]
